<resources>
    <string name="app_name">AndroidFormWiz</string>
    <string name="edit_message">Write Text Please</string>
    <string name="button_new">Create New Form Template</string>
    <string name="button_existing">Work with existing Form</string>
    <string name="hello_world">Hello World!</string>
    <string name="button_create">Create New Template</string>
    <string name="button_use_camera">Camera</string>
    <string name="button_gallery">Gallery</string>
    <string name="imageDescription">User Selected Image</string>
    <string name="imageDescription2">Image of Template Form</string>
    <string-array name="form_array">
        <item>Number</item>
        <item>Text</item>
        <item>Check</item>
        <item>Delete</item>
    </string-array>
    <string name="button_save">Save</string>
    <string name="form_name">Form Name</string>
    <string name="processing">processing image</string>
    <string name="viewForms">View</string>
    <string name="newCompletedForm">New</string>
    <string name="cpp">cpp</string>
</resources>
